--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
+    "@supabase/supabase-js": "^2.76.0",
     "dayjs": "^1.11.18",
     "dexie": "^4.2.1",
     "react": "^19.1.1",
